styles/Project.css
/* ... */
.project-slide .info-projet-container .sub-info {
  margin-top: 30px;
  transition-delay: 0.8s;
}
.project-slide .info-projet-container .sub-info > div {
  display: inline-block;
  vertical-align: top;
}
.project-slide .info-projet-container .sub-info > div + div {
  margin-left: 25px;
}
.project-slide .info-projet-container .sub-info > div > i {
  font-size: 18px;
  font-weight: bold;
}
.project-slide .info-projet-container .sub-info .subtitle {
  color: #f2c84c;
  text-transform: uppercase;
  font-family: Fjalla one;
  margin-bottom: 5px;
}
.project-slide .pic-project {
  width: 400px;
  height: 400px;
  top: calc(50% - 200px);
  left: 10%;
  position: absolute;
  text-align: center;
}
.project-slide .pic-project > img {
  max-height: 100%;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translateY(-50%) translateX(-50%);
}
.project-slide .img-circle-container {
  width: 400px;
  height: 400px;
  overflow: hidden;
  position: absolute;
  top: calc(50% - 200px);
  left: 10%;
  border-radius: 200px;
  background: #f2c84c;
  /* Old browsers */
  background: -moz-linear-gradient(top, #f2c84c 0%, #6190b8 100%);
  /* FF3.6-15 */
  background: -webkit-linear-gradient(top, #f2c84c 0%, #6190b8 100%);
  /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom, #f2c84c 0%, #6190b8 100%);
  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f2c84c', endColorstr='#6190b8',GradientType=0);
  /* IE6-9 */
  padding: 3px;
}
.project-slide .img-circle-container .img-circle-container-border {
  width: 100%;
  height: 100%;
  overflow: hidden;
  border-radius: 100%;
  position: relative;
}
.project-slide .img-circle-container .img-circle {
  position: absolute;
  left: calc(-10vw - 2px);
  right: 0;
  bottom: 0;
  top: calc(-50vh + 197px);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  width: 100vw;
  height: 100vh;
  transition: all 1900ms cubic-bezier(0.19, 1, 0.22, 1);
}
.details-projects {
  position: absolute;
  right: 15%;
  bottom: 10%;
  border: 1px solid rgba(255, 255, 255, 0.2);
  border-radius: 100%;
  width: 91px;
  height: 91px;
  background-color: rgba(255, 255, 255, 0);
  transition: background-color 0.4s 0.2s ease-in;
}
.details-projects:hover {
  background-color: rgba(255, 255, 255, 0.1);
}
.details-projects:hover .details-circle .c1 {
  stroke-dasharray: 295 295;
  opacity: 1;
  transition-property: stroke-dasharray;
}
.details-projects:hover .details-label span {
  transform: translateX(25px);
}
.details-projects:hover .details-arrow {
  left: 17px;
  width: 55px;
}
.details-projects .details-arrow {
  width: 74px;
  height: 26px;
  position: absolute;
  top: 56px;
  left: -12px;
  background-image: url(/assets/arrow_right.png);
  background-repeat: no-repeat;
  background-position: right center;
  background-size: 74px 13px;
  transition: all 1000ms 0.2s cubic-bezier(0.19, 1, 0.22, 1);
}
.details-projects .details-circle {
  transform: rotate(150deg);
  width: 95px;
  height: 95px;
  margin-left: -4px;
  margin-top: -3px;
}
.details-projects .details-circle .c1 {
  stroke-dasharray: 0 295;
  transition: 1s;
  opacity: 0;
}
.details-projects .details-label {
  font-size: 11px;
  line-height: 16px;
  color: #fff;
  position: absolute;
  top: 24px;
  left: -12px;
}
.details-projects .details-label > div {
  display: inline-block;
}
.details-projects .details-label span {
  transition-duration: 1200ms;
  transition-property: all;
  transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
  display: inline-block;
  padding: 0 1px;
}

@media screen and (max-width: 1100px) {
  .project-slide .info-projet-container {
    width: auto;
    padding-right: 5vw;
  }
  .project-slide .info-projet-container .sub-info > div {
    margin-bottom: 15px;
  }
}
@media screen and (max-width: 769px) {
  #circle-bar {
    transform: rotate(-155deg) translateX(55%);
    top: calc(50% - 122px);
    left: 50%;
  }
  #circle-bar .c1,
  #circle-bar .c2 {
    stroke-width: 4px;
  }
  #circle-bar .c1 {
    stroke: white;
    opacity: 1;
  }
  #circle-bar .c2 {
    stroke: #f2c84c;
  }
  .perspective-container {
    transform: none !important;
  }
  .project-slide .info-projet-container .sub-info {
    justify-content: center;
  }
  .details-projects {
    right: 5vw;
    bottom: 15px;
    width: 77px;
    height: 77px;
  }
  .details-projects .details-circle {
    width: 81px;
    height: 81px;
  }
  .project-slide .info-projet-container {
    width: 400px;
    padding: 0 15px;
    text-align: center;
    transform: translateY(-50%) translateX(-50%);
    left: 50%;
  }
  .project-slide .info-projet-container .sub-info .subtitle {
    font-size: 14px;
  }
  .project-slide .info-projet-container .sub-info > div > i {
    font-size: 15px;
  }
  .project-slide .info-projet-container > h2 {
    max-width: 360px;
  }
  .project-slide .info-projet-container > h2 > sup {
    display: none;
  }
  .project-slide .pic-project {
    display: none;
  }
  .project-slide .img-circle-container {
    left: 50%;
    transform: translateX(-50%) translateZ(0);
  }
  .project-slide .img-circle-container .img-circle-container-border {
    background-color: rgba(0, 0, 0, 0.75);
  }
  .recent-projects
    .slides
    .img-circle-container
    .img-circle-container-border
    .img-circle {
    opacity: 0.2;
  }
  .project-slide .img-circle-container .img-circle {
    left: calc(-50vw + 198px);
    top: calc(-50vh + 198px);
  }
}
/* ... */

